# coscool

./: .gitignore  README.md  README.zh-CN.md
.github/workflows/: release.yml
desktop-client/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
desktop-client/src/: App.vue  main.ts
desktop-client/src/api/: native.ts
desktop-client/src/components/: AppNotificationCenter.vue  BoardEditor.vue  FloatingToolDock.vue  FormulaSymbolModal.vue  KnowledgePointTree.vue  MathText.vue  PaperPreview.vue  QuestionCategoryTree.vue
desktop-client/src/constants/: formulaSymbols.ts
desktop-client/src/router/: index.ts
desktop-client/src/styles/: app.css
desktop-client/src/utils/: paperCart.ts  questionAssets.ts
desktop-client/src/views/: KnowledgePointMaintenanceView.vue  LoginView.vue  MainLayout.vue  PaperAssembleView.vue  PaperExportView.vue  PaperMaintenanceView.vue  QuestionBankView.vue  QuestionEditorView.vue  QuestionExportView.vue  QuestionQueryView.vue  SettingsView.vue  StudentView.vue  TeacherView.vue
docs/: README.md  data-library.md  database.md  development.md
docs/prototype/: index.html
mobile-client/: README.md
server/: README.md
tauri-desktop/: package-lock.json  package.json
tauri-desktop/src-tauri/: Cargo.toml  tauri.conf.json
tauri-desktop/src-tauri/capabilities/: default.json
tauri-desktop/src-tauri/icons/: icon.icns
tauri-desktop/src-tauri/src/: lib.rs  main.rs
web-admin/: README.md
